# quickbooks-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  backend-spec.md
.github/workflows/: build-push.yml
deploy/: deployment.yaml
src/: config.rs  error.rs  main.rs  models.rs
src/api/: accounts.rs  company.rs  customers.rs  invoices.rs  mod.rs  payments.rs  reports.rs
src/auth/: handlers.rs  mod.rs  oauth.rs  store.rs
src/qbo/: client.rs  queries.rs  types.rs
src/views/: accounts.rs  company.rs  customers.rs  home.rs  invoices.rs  mod.rs  payments.rs  reports.rs
templates/: base.html  company.html  index.html
templates/accounts/: list.html
templates/customers/: detail.html  list.html
templates/invoices/: detail.html  list.html
templates/payments/: list.html
templates/reports/: report.html
