[package]
name = "vega"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
